[project]
name = "tennis_predictor"
version = "0.1.0"
description = "Predict live tennis match outcomes using Elo ratings and point-by-point data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "flask>=3.0.0",
]
